tests/fixtures/fail/generic_unconstrained_member.sc
let invalid(T: type)(move value: T): i32 = { value.field }

let main(): i32 = { 42 }
